--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/upload",
-      "dest": "/api.py"
+      "src": "/(.*)",
+      "dest": "/"
     }
   ]
 }
